compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__opaque_external_type_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: pub opaque type External
---
----- SOURCE CODE
pub opaque type External

----- WARNING
warning: Opaque external type
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ pub opaque type External
  │ ^^^^^^^^^^^^^^^^^^^^^^^^

This type has no constructors so making it opaque is redundant.

Hint: Remove the `opaque` qualifier from the type definition.
