compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__panic_used_as_function.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() {\n          panic()\n        }"
---
warning: Panic used as a function
  ┌─ /src/warning/wrn.gleam:2:11
  │
2 │           panic()
  │           ^^^^^^^

`panic` is not a function, you can just write `panic` instead of `panic()`.
