compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__panic_used_as_function_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() {\n          panic(1)\n        }"
---
----- SOURCE CODE
pub fn main() {
          panic(1)
        }

----- WARNING
warning: Panic used as a function
  ┌─ /src/warning/wrn.gleam:2:17
  │
2 │           panic(1)
  │                 ^

`panic` is not a function and will crash before it can do anything with
this argument.
Hint: if you want to display an error message you should write
`panic as "my error message"`
See: https://tour.gleam.run/advanced-features/panic/
