compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__panic_used_as_function_inside_pipeline_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn wibble(_) { 1 }\n        pub fn main() {\n            1 |> panic |> wibble\n        }\n        "
---
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:4:27
  │
4 │             1 |> panic |> wibble
  │                           ^^^^^^

This code is unreachable because the expression before it always panics.
