compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__pattern_matching_on_literal_empty_tuple.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() {\n        case #() {\n            _ -> Nil\n        }\n      }"
---
warning: Match on a literal value
  ┌─ /src/warning/wrn.gleam:2:14
  │
2 │         case #() {
  │              ^^^ There's no need to match on this value

Matching on a literal value is redundant since you can already tell which
branch is going to match with this value.
